# p24

./: Cargo.toml  README.md
src/: arg_parsing.rs  expression.rs  lib.rs  main.rs
src/maths/: rational.rs
